--- a/app/static/main/css/styles.css
+++ b/app/static/main/css/styles.css
@@ -1,3 +1,52 @@
-h1 {
-    background-color: red;
+html {
+    scroll-behavior: smooth;
+}
+
+.favicon {
+    object-fit: cover;
+    object-position: 70% 50%;
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+}
+
+.container {
+    max-width: 1180px;
+}
+
+.offset {
+    margin-top: 110px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header {
+    background-color: rgb(224, 247, 248);
+    border-bottom-right-radius: 30px 30px;
+    border-bottom-left-radius: 30px 30px;
+}
+
+.product-image {
+    object-fit: cover;
+    object-position: 50% 50%;
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+.my-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.inner-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.my-btn {
+    max-width: 150px;
+    margin: 10px auto;
 }
