--- a/app/static/main/css/styles.css
+++ b/app/static/main/css/styles.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    font-family: Arial, sans-serif;
 }
 
 .favicon {
@@ -15,10 +16,10 @@ html {
 }
 
 .offset {
-    margin-top: 110px;
+    margin-top: 110px !important;
     max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
 
 .header {
@@ -33,6 +34,8 @@ html {
     width: 100px;
     height: 100px;
     border-radius: 20px;
+    margin: 20px;
+    align-self: center;
 }
 
 .my-card {
@@ -44,9 +47,114 @@ html {
 .inner-card {
     display: flex;
     flex-direction: column;
+    padding: 10px 10px 10px 40px;
 }
 
 .my-btn {
     max-width: 150px;
     margin: 10px auto;
 }
+
+.basket-count {
+    padding: 8px;
+    color: #0d6efd;
+    font: 16px Arial, sans-serif;
+}
+
+.circle {
+    border: 1px solid #0d6efd;
+    background: rgb(224, 247, 248);
+    border-radius: 50%;
+    height: 1.5rem;
+    align-self: center;
+    position: relative;
+    left: -10px;
+}
+
+.card_header {
+    background-color: rgb(224, 247, 248) !important;
+    border-top-left-radius: 30px !important;
+    border-top-right-radius: 30px !important;
+}
+
+.my_col {
+    width: 80% !important;
+    margin: 0 auto;
+}
+
+.radius {
+    border-radius: 50px !important;
+    --bs-btn-padding-x: 0.5rem !important;
+    --bs-btn-padding-y: 0.5rem !important;
+    margin: 0px 40px 10px;
+}
+
+.reset_btn {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+}
+
+.counter {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+}
+
+.six {
+    padding: 20px 20px;
+    text-align: center;
+  }
+  .six h1 {
+    font-weight: 600;
+    font-family: 'Merriweather', serif;
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    line-height: 1;
+    color: #267dff;
+    font-size: 22px;
+    padding: .4em 1em .55em;
+  }
+  .six h1:before,
+  .six h1:after {
+    content: ""; 
+    position: absolute;
+    width: 60%;
+    height: .1em;
+    background: #8fbafa; 
+  }
+  .six h1:before {
+    left: 0;
+    top: 0;
+  }
+  .six h1:after {
+    right: 0;
+    bottom: 0;
+  }
+  .six h1 span:before,
+  .six h1 span:after {
+    content: ""; 
+    position: absolute;
+    width: .65em;
+    height: .65em;
+    border: .13em solid #8fbafa;
+    border-radius: 50%;
+    box-sizing: border-box;
+  }
+  .six h1 span:before {
+    top: -.55em;
+    left: -.325em;
+  }
+  .six h1 span:after {
+    bottom: -.55em;
+    right: -.325em;
+  }
+  @media (max-width: 600px) {
+    .six h1 {font-size: 2em;}
+  }
+  @media (max-width: 450px) {
+    .six h1 {font-size: 1.5em;}
+  }
