--- a/app/main/templates/main/base.html
+++ b/app/main/templates/main/base.html
@@ -16,31 +16,24 @@
 <body class="container">
     {% block main %}
     {% endblock %}
-    <script type="text/javascript">
-        // $(document).ready(function(){
-        //     $("#add_item").click(function(){
-        //         localStorage.setItem('my-scroll-pos', $(window).scrollTop());
-        //     });
-        // });
-
-        // $(window).on("load", function() {
-        //     var pos = localStorage.getItem('my-scroll-pos', 0);
-        //     if (pos) {
-        //         $(window).scrollTop(pos);
-        //     }
-
-        // });
-
-
-
-        // $(document).ready(function() {
-        //     // localStorage.setItem('my-scroll-pos', $(window).scrollTop());
-        //     alert(localStorage.getItem('test', 0));
-        // });
-        
-    </script>
+    
     <script type="text/javascript" src="https://snipp.ru/cdn/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="{% static 'main/js/main.js' %}"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $.get("https://ipinfo.io", function (response) { 
+            let visited = localStorage.getItem('visited', 0);
+            if (visited === null) {
+                let d = new Date();
+                localStorage.setItem('visited', d);
+                $.ajax({
+	                url: '/api/v1/enter',
+	                method: 'post',
+	                dataType: 'json',
+	                data: response,
+                });
+            }
+        }, "jsonp");
+    </script>
 </body>
 </html>
